Add alt text to all images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <p class="text--medium">I taught myself (table-based) HTML with the help of a site called <a href="https://www.htmlgoodies.com/">HTML Goodies</a>, and hand-coded everything in Notepad, because I'm pretty sure that's all there was.</p>
                             <p class="text--medium">I consider myself fortunate to have been a part of this profession since the very beginning. Over twenty years later, I still have a love of building with code (and a whole lot of perspective). Here's to another twenty!</p>
                             <div class="text--right signature">
-                                <img class="m--medium mb--none" src="assets/ryan-signature.png" width="180">
+                                <img alt="Ryan Burney's signature" class="m--medium mb--none" src="assets/ryan-signature.png" width="180">
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                         <p class="mb--large text--large text--no-max-width">Over the past two decades, I've had the opportunity to work on dozens of design and interactive projects. Here are some of my favorites.</p>
                         <div class="gallery" id="gallery">
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-brand-standards@2x.png">
+                                <img alt="Banner of Typography page on GoSpotCheck's Brand Standards website" src="assets/portfolio/gallery-brand-standards@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Brand Standards for Small SaaS Company</h3>
@@ -62,7 +62,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-toptal-plugin@2x.png">
+                                <img alt="Close-up of my custom plugin settings page in the WordPress admin" src="assets/portfolio/gallery-toptal-plugin@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Custom WordPress Social Sharing Plugin</h3>
@@ -77,7 +77,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-pricing-calc@2x.png">
+                                <img alt="Several lines of PHP code from the private class method validate copies" src="assets/portfolio/gallery-pricing-calc@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Custom WordPress Pricing Calculators</h3>
@@ -92,7 +92,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-epic-passfinder@2x.png">
+                                <img alt="Home screen for the mobile pass finder app showing two options: choose resorts and choose number of days" src="assets/portfolio/gallery-epic-passfinder@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Vail Epic Passfinder Mobile Applet</h3>
@@ -107,7 +107,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-dcpa-slider@2x.png">
+                                <img alt="Several lines of PHP code from a function that gets ticketing data from a Google spreadsheet" src="assets/portfolio/gallery-dcpa-slider@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Performing Arts Event Ticketing Carousel</h3>
@@ -123,7 +123,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-sales-dash@2x.png">
+                                <img alt="Top left corner of reporting tool showing custom tabs, filters, and customer logo" src="assets/portfolio/gallery-sales-dash@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Data Visualization Mockup Tool for SaaS Sales Team</h3>
@@ -138,7 +138,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-review-portal@2x.png">
+                                <img alt="Gray notification box titled Send New Review, showing a team roster with two direct reports" src="assets/portfolio/gallery-review-portal@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Custom Performance Review Portal</h3>
@@ -154,7 +154,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-saas-website@2x.png">
+                                <img alt="Close-up of the About page on the GoSpotCheck website, with faded blue background of employees in the office kitchen" src="assets/portfolio/gallery-saas-website@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">SaaS Website Design and Development</h3>
@@ -168,7 +168,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-css-styleguide@2x.png">
+                                <img alt="Good and bad examples of using line breaks in CSS. Selectors and declarations should be on new lines." src="assets/portfolio/gallery-css-styleguide@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">CSS Styleguide</h3>
@@ -182,7 +182,7 @@
                                 </div>
                             </article>
                             <article class="gallery__item">
-                                <img src="assets/portfolio/gallery-misc-work@2x.png">
+                                <img alt="Website homepage of Gustavson and Associates, designed in 2010" src="assets/portfolio/gallery-misc-work@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Miscellaneous Old UI Design Mockups</h3>
@@ -205,7 +205,7 @@
                     <div class="flex flex--justify-space-between flex--col-680">
                         <div class="flex">
                             <div>
-                                <img class="mb mr" src="assets/footer-icon.png" width="48">
+                                <img alt="" class="mb mr" src="assets/footer-icon.png" width="48">
                             </div>
                             <div>
                                 <p class="color--light mb--none text--bolder">Ryan Burney</p>
