Add latest Vue.js projects

--- a/index.html
+++ b/index.html
@@ -48,6 +48,34 @@
                         <p class="mb--large text--large text--no-max-width">Over the past two decades, I've had the opportunity to work on dozens of design and interactive projects. Here are some of my favorites.</p>
                         <div class="gallery" id="gallery">
                             <article class="gallery__item">
+                                <img alt="Close-up of overall rating and best qualities of one of the credit cards featured in the picker app" src="assets/portfolio/gallery-weather-app@2x.jpg">
+                                <div>
+                                    <header>
+                                        <h3 class="gallery__title">Weather Forecast App</h3>
+                                        <p class="gallery__blurb">For my second Vue.js app, I created a simple <a href="projects/wipro-weather-widget">weather forecast app</a> that fetches a five-day forecast from the Open Weather Map API. This project was also part of an interview process for a large digital consulting company.</p>
+                                    </header>
+                                    <ul class="gallery__list">
+                                        <li>2019</li>
+                                        <li>Vue.js</li>
+                                        <li>UI Design</li>
+                                    </ul>
+                                </div>
+                            </article>
+                            <article class="gallery__item">
+                                <img alt="Close-up of overall rating and best qualities of one of the credit cards featured in the picker app" src="assets/portfolio/gallery-cc-picker@2x.png">
+                                <div>
+                                    <header>
+                                        <h3 class="gallery__title">Credit Card Picker App</h3>
+                                        <p class="gallery__blurb">As part of the interview process with a well-known financial services company, I created <a href="projects/ascent-cc-picker">a small app</a> that allows visitors to choose the best credit card for them based on credit rating and card type.</p>
+                                    </header>
+                                    <ul class="gallery__list">
+                                        <li>2019</li>
+                                        <li>Vue.js</li>
+                                        <li>UI Design</li>
+                                    </ul>
+                                </div>
+                            </article>
+                            <article class="gallery__item">
                                 <img alt="Banner of Typography page on GoSpotCheck's Brand Standards website" src="assets/portfolio/gallery-brand-standards@2x.png">
                                 <div>
                                     <header>
