Add Boozehound / drink finder app
Also, various copy updates

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div>
                     <header>
                         <h1 class="text--uppercase text--shadow-2x">Ryan Burney</h1>
-                        <p class="hero__subheading">UI Designer &amp; Front-End Engineer</p>
+                        <p class="hero__subheading">Front-End Designer &amp; Developer</p>
                     </header>
                     <div class="flex">
                         <a href="#portfolio" class="btn">Portfolio</a>
-                        <a href="assets/Ryan-Burney-Resume-2019.pdf" class="btn btn--secondary" target="_blank">Résumé</a>
+                        <a href="assets/Ryan-Burney-Resume-2022.pdf" class="btn btn--secondary" target="_blank">Résumé</a>
                     </div>
                 </div>
             </div>
@@ -48,6 +48,35 @@
                         <p class="mb--large text--large text--no-max-width">Over the past two decades, I've had the opportunity to work on dozens of design and interactive projects. Here are some of my favorites.</p>
                         <div class="gallery" id="gallery">
                             <article class="gallery__item">
+                                <img alt="Boozehound logo in red and white on a dark background, beneath which is the tagline: Find your next drink" src="assets/portfolio/gallery-boozehound@2x.jpg">
+                                <div>
+                                    <header>
+                                        <h3 class="gallery__title">Drink Recipe Lookup Web App</h3>
+                                        <p class="gallery__blurb">My most recent personal project solves a problem I&rsquo;ve long encountered around happy hour: <a href="https://findyournextdrink.com/">what drink to make</a> with the limited ingredients in my bar. Backed by Algolia's powerful search, my app is a fun and easy way to look up recipes by ingredients, name, type, and more. Prost!</p>
+                                    </header>
+                                    <ul class="gallery__list">
+                                        <li>2021</li>
+                                        <li>Vue.js</li>
+                                        <li>Firebase</li>
+                                        <li>UI Design/Dev</li>
+                                    </ul>
+                                </div>
+                            </article>
+                            <article class="gallery__item">
+                                <img alt="The gold and white Modus Persona logo on a solid black background" src="assets/portfolio/gallery-mp-website@2x.png">
+                                <div>
+                                    <header>
+                                        <h3 class="gallery__title">Agency Website Design and Development</h3>
+                                        <p class="gallery__blurb">I am proud to have lead design and development efforts for the first major update in over four years to Modus Persona&rsquo;s <a href="https://moduspersona.com">agency website</a>.</p>
+                                    </header>
+                                    <ul class="gallery__list">
+                                        <li>2020</li>
+                                        <li>UI Design/Dev</li>
+                                        <li>WordPress</li>
+                                    </ul>
+                                </div>
+                            </article>
+                            <article class="gallery__item">
                                 <img alt="Close-up of overall rating and best qualities of one of the credit cards featured in the picker app" src="assets/portfolio/gallery-weather-app@2x.jpg">
                                 <div>
                                     <header>
@@ -66,7 +95,7 @@
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Credit Card Picker App</h3>
-                                        <p class="gallery__blurb">As part of the interview process with a well-known financial services company, I created <a href="projects/ascent-cc-picker">a small app</a> that allows visitors to choose the best credit card for them based on credit rating and card type.</p>
+                                        <p class="gallery__blurb">As part of the interview process with a well-known financial services company, I created <a href="projects/acme-cc-picker">a small app</a> that allows visitors to choose the best credit card for them based on credit rating and card type. <em>Password protected – type "user" and then "pass" to gain access.</em></p>
                                     </header>
                                     <ul class="gallery__list">
                                         <li>2019</li>
@@ -109,13 +138,13 @@
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Custom WordPress Pricing Calculators</h3>
-                                        <p class="gallery__blurb">I replaced Dazzle Printing’s old pricing calculators, which were difficult to update, with a simple interface in a WordPress backend. Pricing is validated and updated via a PHP class and custom jQuery. I am currently rebuilding each <a href="https://www.dazzleprinting.com/online-printing/book-printing/">calculator</a> from React components for better performance.</p>
+                                        <p class="gallery__blurb">I replaced Dazzle Printing’s old pricing calculators, which were difficult to update, with a simple interface in a WordPress backend. Pricing is calculated on the front-end with Vue components and validated on the server with a PHP class.</p>
                                     </header>
                                     <ul class="gallery__list">
-                                        <li>2018-19</li>
+                                        <li>2018-20</li>
                                         <li>PHP</li>
                                         <li>WordPress</li>
-                                        <li>jQuery</li>
+                                        <li>Vue</li>
                                     </ul>
                                 </div>
                             </article>
@@ -124,7 +153,7 @@
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Vail Epic Passfinder Mobile Applet</h3>
-                                        <p class="gallery__blurb">Vail Resorts needed a mobile-friendly way to help sell and explain their various ski passes. I created <a href="projects/passfinder/views/Home/index-mobile.html">a simple applet</a> that guides customers through a selection process and then suggests the optimal pass based on their answers. Looks best when viewed on a mobile device.</p>
+                                        <p class="gallery__blurb">Vail Resorts needed a mobile-friendly way to help sell and explain their various ski passes. I created a simple applet that guides customers through a selection process and then suggests the optimal pass based on their answers.</p>
                                     </header>
                                     <ul class="gallery__list">
                                         <li>2014</li>
@@ -134,7 +163,7 @@
                                     </ul>
                                 </div>
                             </article>
-                            <article class="gallery__item">
+                            <!-- <article class="gallery__item">
                                 <img alt="Several lines of PHP code from a function that gets ticketing data from a Google spreadsheet" src="assets/portfolio/gallery-dcpa-slider@2x.png">
                                 <div>
                                     <header>
@@ -149,13 +178,13 @@
                                         <li>Acting</li>
                                     </ul>
                                 </div>
-                            </article>
+                            </article> -->
                             <article class="gallery__item">
                                 <img alt="Top left corner of reporting tool showing custom tabs, filters, and customer logo" src="assets/portfolio/gallery-sales-dash@2x.png">
                                 <div>
                                     <header>
                                         <h3 class="gallery__title">Data Visualization Mockup Tool for SaaS Sales Team</h3>
-                                        <p class="gallery__blurb">In the early days of GoSpotCheck, the Sales team needed a way to quickly show prospects how our reporting dashboard looked. I built a WordPress-powered backend that let them create mock dashboards in a matter of minutes (it is actually more flexible than the real thing!). Almost four years later, this tool still provides a lot of value.</p>
+                                        <p class="gallery__blurb">In the early days of GoSpotCheck, the sales team needed a way to quickly show prospects how our reporting dashboard looked. I built a WordPress-powered backend that let them create mock dashboards in a matter of minutes (it was more flexible than the real thing!). The team used the tool for over four years.</p>
                                     </header>
                                     <ul class="gallery__list">
                                         <li>2015</li>
@@ -178,20 +207,6 @@
                                         <li>WordPress</li>
                                         <li>PHP</li>
                                         <li>jQuery</li>
-                                    </ul>
-                                </div>
-                            </article>
-                            <article class="gallery__item">
-                                <img alt="Close-up of the About page on the GoSpotCheck website, with faded blue background of employees in the office kitchen" src="assets/portfolio/gallery-saas-website@2x.png">
-                                <div>
-                                    <header>
-                                        <h3 class="gallery__title">SaaS Website Design and Development</h3>
-                                        <p class="gallery__blurb">During my four years at GoSpotCheck, I’ve been the primary caretaker, designer, and developer of our <a href="https://www.gospotcheck.com">main website</a>. The current iteration is the first that fully implements our latest brand standards.</p>
-                                    </header>
-                                    <ul class="gallery__list">
-                                        <li>2015-19</li>
-                                        <li>UI Design/Dev</li>
-                                        <li>Info Arch</li>
                                     </ul>
                                 </div>
                             </article>
@@ -237,8 +252,8 @@
                             </div>
                             <div>
                                 <p class="color--light mb--none text--bolder">Ryan Burney</p>
-                                <p class="color--light text--faded">UI Designer &amp; Front-End Engineer</p>
-                                <p class="color--light mb--none text--faded">&copy; 2019</p>
+                                <p class="color--light text--faded">Front-End Designer &amp; Developer</p>
+                                <p class="color--light mb--none text--faded">&copy; 2019-22</p>
                             </div>
                         </div>
                         <div>
